--- a/config.toml
+++ b/config.toml
@@ -77,7 +77,7 @@ network_boot_nodes = ["/ip4/47.251.117.133/udp/1234/p2p/16Uiu2HAmTVDGNhkHD98zDnJ
 #######################################################################
 
 # RPC endpoint to sync event logs on EVM compatible blockchain.
-blockchain_rpc_endpoint = "https://0g-galileo-evmrpc.corenodehq.xyz/"
+blockchain_rpc_endpoint = "https://0g.json-rpc.cryptomolot.com/"
 
 # Flow contract address to sync event logs.
 log_contract_address = "0xbD75117F80b4E22698D0Cd7612d92BDb8eaff628"
