--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,6 @@
 # This is a TOML config file.
 # For more information, see https://github.com/toml-lang/toml
+# Взято с канала SNGDAO https://t.me/sng_dao
 
 #######################################################################
 ###                     Network Config Options                      ###
